Changelog for Miosix np embedded OS

v1.61
- Added prliminary version of the event API to allow asynchronous programming.
  It is located in the miosix/e20 directory, and provides event loops where
  function calls can be injected by other threads as well as by interrupt
  handlers.
- Modified the implementation of pauseKernel() and restartKernel() so as to
  be able to call them safely within an InterruptDisableLock block. This allows
  allocating memory with malloc/new when interrupts are disabled in an
  InterruptDisableLock (but not in a FastInterruptDisableLock). This change
  only relaxes a constraint, so it does not break existing code.
v1.60
- Added new board: bitsboard. This is effectively an stm32f4discovery tweaked
  be used in the bits project: bits.poul.org
- Fixed a bug in FastMutex::get(): the member function was unimplemented.
- Fixed a bug in ST code for the stm3220g-eval board: despite having a 2MB RAM,
  A18, A19 and A20 were left as GPIOs, resulting in issues when accessing the
  upper part of the RAM.
- Added util/lcd44780.h and util/lcd44780.cpp with support for the common
  HD44780 LCD displays
- Added Gpio::getPin() to convert from a Gpio to a GpioPin class
- Added GpioPin class to make it easier to pass a Gpio as a parameter to a
  function
- Fixed the stm32 SDIO driver to prevent a glitch on the CMD pin from creating
  isues with the card initialization.
- Added EthBoardV2 board to the list of supported boards
- Added configurations support to the Netbeans project. There is now one
  configuration for each supported board. This improves code completion for
  architecture and board specific symbols. Note that selecting a board from the
  IDE does not replace the need to edit miosix/config/Makefile.inc
- Adapted sad_trombone example to also support the stm32f4discovery board
- Added support to stm3220g-eval to miosix/bootloaders/stm32, and renamed
  folder (before it was miosix/bootloaders/stm3210e-eval)